header and intro setup

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -2,4 +2,4 @@
 @import url(layout.css);
 @import url(header.css);
 @import url(footer.css);
-@import url(content.css);
+@import url(main_page.css);
