--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,12 +1,13 @@
 html {
 	height: 100vh;
-	width: 100vw;
+	max-width: 1440px;
+	min-width: 100vh;
 }
 
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 12px;
-	min-height: 100vh;
+	max-height: 100vh;
 	width: 100%;
 	margin: 0;
 }
@@ -62,5 +63,4 @@ small {
 
 .app {
 	margin: 0 auto;
-	min-height: 1200px;
 }
