--- a/assets/css/main_page.css
+++ b/assets/css/main_page.css
@@ -9,13 +9,11 @@
 }
 
 .main-content > .contents > .splash {
-  height: 90vh;
   width: 100%;
+  height: 85vh;
   box-sizing: border-box;
-}
-
-.main-content > .contents > .splash > .splash-container {
-  height: 100%;
+  background-position: center;
+  background-size: cover;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -23,7 +21,7 @@
   position: relative;
 }
 
-.main-content > .contents > .splash > .splash-container > .text {
+.main-content > .contents > .splash > .text {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,7 +29,7 @@
   width: 80%;
 }
 
-.main-content > .contents > .splash > .splash-container > .links {
+.main-content > .contents > .splash > .links {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -40,35 +38,28 @@
   margin: 20px;
 }
 
-.main-content > .contents > .splash > .splash-container > .text > .name {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-  width: 60%;
-}
-
-.main-content > .contents > .splash > .splash-container > .text div {
-  font-size: 60px;
+.main-content > .contents > .splash > .text h1 {
+  font-size: 100px;
   margin: 10px;
 }
 
-.main-content > .contents > .splash > .splash-container > .text h2 {
-  font-size: 40px;
+.main-content > .contents > .splash > .text h2 {
+  font-size: 50px;
   margin: 10px;
 }
 
-.main-content > .contents > .splash > .splash-container > .text h3 {
+.main-content > .contents > .splash > .text h3 {
   font-size: 15px;
   margin: 5px;
 }
 
-.main-content > .contents > .splash > .splash-container > .text h5 {
+.main-content > .contents > .splash > .text h5 {
   font-size: 12px;
   margin: 5px;
 }
 
 
-.main-content > .contents > .splash > .splash-container > .links > li:hover {
+.main-content > .contents > .splash > .links > li:hover {
   transform: scale(1.08);
   cursor: pointer;
 }
