--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -3,3 +3,7 @@
 @import url(header.css);
 @import url(footer.css);
 @import url(main_page.css);
+@import url(intro.css);
+@import url(projects.css);
+@import url(assets.css);
+@import url(about.css)
