--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -6,4 +6,5 @@
 @import url(intro.css);
 @import url(projects.css);
 @import url(assets.css);
-@import url(about.css)
+@import url(about.css);
+@import url(resume.css);
