--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,26 +1,34 @@
 .about {
   display: flex;
   flex-direction: column;
-  height: 700px;
+  height: 760px;
   margin: 0 auto;
 }
 
 .about-title {
-  width: 55%;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 600;
+  color: black;
+  width: 200px;
   margin: 0 auto;
-  line-height: 200px;
-  font-size: 30px;
-  font-weight: 400;
+  line-height: 120px;
+  border-bottom: 5px solid black;
 }
 
 .about-content {
   width: 70%;
   margin: 0 auto;
   display: flex;
+  justify-content: space-around;
+  margin-top: 150px;
 }
 
 .about-pic {
-  width: 40%;
+  width: 280px;
+  height: 375px;
+  border-radius: 4px;
+  margin-top: 10px;
 }
 
 .blurb {
@@ -29,8 +37,17 @@
 }
 
 .blurb p {
-  margin-bottom: 30px;
-  font-weight: 300;
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 10px;
+  font-weight: 200;
   font-size: 15px;
   line-height: 30px;
+}
+
+.blurb h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 30px;
 }
