--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -44,25 +44,26 @@
 }
 
 .project-name {
+  font-family: 'Montserrat', sans-serif;
   color: white;
   font-size: 28px;
-  font-weight: 100;
+  font-weight: 600;
   margin-bottom: 30px;
   display: flex;
   justify-content: space-between;
 }
 
-.project-links {
+.projects-links {
   width: 60px;
   display: flex;
   justify-content: space-between;
 }
 
-.project-links i {
+.projects-links i {
   cursor: pointer;
 }
 
-.project-links i:hover {
+.projects-links i:hover {
   transform: scale(1.04);
 }
 
@@ -82,6 +83,8 @@
   color: white;
   font-size: 14px;
   line-height: 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 100;
 }
 
 .project-assets {
