--- a/assets/css/assets.css
+++ b/assets/css/assets.css
@@ -4,7 +4,6 @@
   height: 700px;
   box-sizing: border-box;
   display: flex;
-  justify-content: space-around;
   flex-direction: column;
 }
 
@@ -20,6 +19,7 @@
 }
 
 .all-assets {
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   height: 480px;
@@ -74,7 +74,7 @@
 
 .all-assets > .top {
   width: 70%;
-  height: 160px;
+  height: 150px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -124,7 +124,7 @@
 
 .all-assets > .mid {
   width: 70%;
-  height: 160px;
+  height: 150px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -183,7 +183,7 @@
 
 .all-assets > .bot {
   width: 70%;
-  height: 160px;
+  height: 140px;
   display: flex;
   justify-content: space-around;
   align-items: center;
