--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -58,7 +58,7 @@
   line-height: 25px;
   font-size: 13px;
   font-family: 'Montserrat', sans-serif;
-  font-weight: 100;
+  font-weight: 200;
   padding: 10px 10px 10px 20px;
 }
 
@@ -141,7 +141,7 @@
   font-size: 13px;
   font-family: 'Montserrat', sans-serif;
   color: white;
-  font-weight: 100;
+  font-weight: 200;
   line-height: 18px;
 }
 
@@ -169,7 +169,7 @@
   font-family: 'Montserrat', sans-serif;
   color: white;
   font-size: 15px;
-  font-weight: 100;
+  font-weight: 200;
   line-height: 40px;
   padding-left: 20px;
   display: flex;
@@ -193,7 +193,7 @@
   display: flex;
   flex-direction: column;
   background: white;
-  height: 980px;
+  height: 940px;
 }
 
 .resume-projects h2 {
@@ -217,7 +217,7 @@
 }
 
 .projects-detail > .resume-frozen-milk {
-  height: 300px;
+  height: 260px;
   width: 740px;
   display: flex;
   justify-content: space-between;
@@ -238,7 +238,7 @@
 }*/
 
 .resume-experience {
-  height: 260px;
+  height: 300px;
   background: white;
 }
 
@@ -400,7 +400,7 @@
   height: 22px;
   position: absolute;
   left: 48px;
-  top: 906px;
+  top: 866px;
   box-shadow: 4px 4px 14px 0px rgba(50, 50, 50, 0.56);
 }
 
@@ -411,7 +411,7 @@
   height: 22px;
   position: absolute;
   left: 48px;
-  top: 1304px;
+  top: 1264px;
   box-shadow: 4px 4px 14px 0px rgba(50, 50, 50, 0.56);
 }
 
@@ -422,7 +422,7 @@
   height: 22px;
   position: absolute;
   left: 48px;
-  top: 1391px;
+  top: 1351px;
   box-shadow: 4px 4px 14px 0px rgba(50, 50, 50, 0.56);
 }
 
@@ -486,6 +486,11 @@
   font-weight: 200;
   line-height: 20px;
   padding-top: 15px;
+  font-size: 15px;
+}
+
+.features span {
+  padding-bottom: 5px;
 }
 
 i > h4 {
@@ -545,6 +550,7 @@ i > h4 {
   font-weight: 200;
   line-height: 20px;
   padding-top: 5px;
+  font-size: 15px;
 }
 
 .change-cursor:hover {
