--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -433,7 +433,7 @@
   height: 22px;
   position: absolute;
   left: 48px;
-  top: 1351px;
+  top: 1373px;
   box-shadow: 4px 4px 14px 0px rgba(50, 50, 50, 0.56);
 }
 
@@ -515,7 +515,7 @@ i > h4 {
 }
 
 .experience-detail {
-  height: 175px;
+  height: 220px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -527,7 +527,7 @@ i > h4 {
   display: flex;
 }
 
-.LLC {
+.cacaoDev {
   width: 100%;
   height: 50%;
   display: flex;
