--- a/assets/sass/components/intro.scss
+++ b/assets/sass/components/intro.scss
@@ -1,74 +1,27 @@
-.contents > .intro {
-  width: 100%;
-  height: 700px;
-  box-sizing: border-box;
-  background-position: center;
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
+.intro {
+  padding: 140px 0 320px;
+
+  h1 {
+    font-size: 84px;
+  }
 }
 
-.contents > .intro > .text {
+.links {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 80%;
-}
-
-.contents > .intro > .links {
-  display: flex;
-  align-items: center;
   justify-content: space-between;
-  min-width: 300px;
-  max-width: 300px;
-  margin: 20px;
-}
+  align-items: center;
+  width: 30%;
+  margin: 0 auto;
+  margin-top: 30px;
+  padding-left: 0;
 
-.contents > .intro > .text h1 {
-  font-size: 100px;
-  margin: 10px;
-}
+  li {
+    cursor: pointer;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
 
-.contents > .intro > .text h2 {
-  font-size: 50px;
-  margin: 10px;
-}
-
-.contents > .intro > .text h3 {
-  font-size: 15px;
-  margin: 5px;
-}
-
-.contents > .intro > .text h5 {
-  font-size: 12px;
-  margin: 5px;
-}
-
-
-.links > li:hover {
-  transform: scale(1.08);
-  cursor: pointer;
-}
-
-
-.contents > .projects > .stick-container {
-  position: fixed;
-  left: 0;
-  min-width: 3vw;
-  top: 50%;
-  color: gray;
-}
-
-.contents > .projects > .stick-container > ul {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.contents > .projects > .stick-container > ul > li {
-  padding-bottom: 12px;
+    &:hover, &:focus {
+      transform: scale(1.2);
+    }
+  }
 }
