--- a/assets/sass/base/global.scss
+++ b/assets/sass/base/global.scss
@@ -8,3 +8,13 @@ $montserrat: "Montserrat", sans-serif;
 .main-content {
   margin-top: 71px;
 }
+
+.projects {
+  background: #303030;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
