--- a/assets/sass/base/global.scss
+++ b/assets/sass/base/global.scss
@@ -17,4 +17,14 @@ $montserrat: "Montserrat", sans-serif;
   justify-content: center;
   align-items: center;
 
+  h1 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 600;
+    color: white;
+    width: 200px;
+    margin: 0 auto;
+    line-height: 120px;
+    border-bottom: 5px solid white;
+  }
 }
