--- a/assets/sass/components/footer.scss
+++ b/assets/sass/components/footer.scss
@@ -27,6 +27,11 @@
   justify-content: space-between;
   width: 80%;
   margin: 0 auto;
+
+  @include respond-to("phone-screen") {
+    flex-direction: column;
+    div { margin: 20px 0; }
+  };
 }
 
 .footer-top > .links {
