--- a/assets/sass/components/intro.scss
+++ b/assets/sass/components/intro.scss
@@ -1,8 +1,17 @@
 .intro {
-  padding: 140px 0 320px;
+  padding: 120px 0 280px;
 
   h1 {
     font-size: 84px;
+  }
+
+  .title {
+    width: 30%;
+    margin: 30px auto;
+    cursor: pointer;
+    font-size: 2.5rem;
+
+    @include respond-to("phone-screen") { width: 70%; };
   }
 }
 
