--- a/assets/sass/components/intro.scss
+++ b/assets/sass/components/intro.scss
@@ -1,5 +1,5 @@
 .intro {
-  padding: 120px 0 280px;
+  padding: 120px 0 250px;
 
   h1 {
     font-size: 84px;
@@ -7,7 +7,7 @@
 
   .title {
     width: 30%;
-    margin: 30px auto;
+    margin: 30px auto 20px;
     cursor: pointer;
     font-size: 2.5rem;
 
@@ -21,7 +21,7 @@
   align-items: center;
   width: 30%;
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 40px;
   padding-left: 0;
 
   @include respond-to("phone-screen") { width: 100%; };
@@ -36,4 +36,8 @@
       transform: scale(1.2);
     }
   }
+}
+
+.arrow {
+  margin: 0 auto;
 }
