--- a/assets/sass/components/intro.scss
+++ b/assets/sass/components/intro.scss
@@ -1,6 +1,6 @@
 .intro {
-  padding: 120px 0 250px;
-
+  padding: 60px 0 0;
+  @include respond-to("phone-screen") { padding: 80px 0 180px; };
   h1 {
     font-size: 84px;
   }
@@ -15,6 +15,9 @@
   }
 }
 
+.header {
+  padding: 60px 0 260px;
+}
 .links {
   display: flex;
   justify-content: space-between;
